infrastructure/k8s/kube/earl-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: earl-bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: earl-bot
  template:
    metadata:
      labels:
        app: earl-bot
    spec:
      containers:
        - name: earl-bot-container
          image: registry.digitalocean.com/tcc-registry/earl-bot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
 
---

apiVersion: v1
kind: Service
metadata:
  name: earl-bot
spec:
  selector:
      app: earl-bot
  ports:
    - port: 80
