infrastructure/k8s/kube/web-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-portal
  template:
    metadata:
      labels:
        app: web-portal
    spec:
     containers:
        - name: web-portal-container
          image: registry.digitalocean.com/tcc-registry/web-portal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: web-portal
spec:
  selector:
      app: web-portal
  ports:
    - port: 3000
