infrastructure/k8s/kube/tcc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-ingress-root
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: caol.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-portal
                port:
                  number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-ingress-earl
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: earl.caol.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: earl-bot
                port:
                  number: 80
